ide-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: launchx-ide
spec:
  replicas: 1
  selector:
    matchLabels:
      app: launchx-ide
  template:
    metadata:
      labels:
        app: launchx-ide
    spec:
      containers:
        - name: launchx-ide
          image: gcr.io/launchx-jc/launchx-ide:latest
          ports:
            - containerPort: 8080
          volumeMounts:
          - mountPath: /workspace
            name: workspace-volume
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
          
      volumes:
      - name: workspace-volume
        persistentVolumeClaim:
          claimName: workspace-pvc
      - name: nginx-config
        configMap:
          name: launchx-nginx-config
