ide-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: launchx-ide-service
spec:
  type: LoadBalancer
  selector:
    app: launchx-ide
  ports:
    - port: 80
      targetPort: 80
