ide-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ide-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: launchx-ide-service
            port:
              number: 80
